<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:id="@+id/card_view"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground">

        <LinearLayout
                android:id="@+id/linear_layout_for_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/news_card_title"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:paddingBottom="4dp"
                    android:paddingTop="16dp"
                    android:fontFamily="sans-serif-condensed"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/news_card_title"/>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="4dp">

                <TextView
                        android:id="@+id/news_card_category"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:ellipsize="end"
                        android:singleLine="true"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif"
                        android:layout_toStartOf="@id/news_card_thumbnail"
                        android:textColor="#4CAF50"
                        android:text="@string/news_card_category"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/news_card_content"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/news_card_category"
                        android:layout_marginBottom="8dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:ellipsize="end"
                        android:fontFamily="sans-serif-light"
                        android:maxLines="6"
                        android:layout_toStartOf="@+id/news_card_thumbnail"
                        android:textColor="#102027"
                        android:text="@string/news_card_content"/>

                <ImageView
                        android:id="@+id/news_card_thumbnail"
                        android:layout_width="140dp"
                        android:layout_height="120dp"
                        android:layout_alignParentEnd="true"
                        android:contentDescription="@string/news_card_image_description"
                        android:scaleType="centerCrop"
                        android:visibility="gone"
                        android:layout_alignParentTop="true" android:layout_marginEnd="16dp"
                        android:layout_marginTop="20dp"/>

            </RelativeLayout>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/news_card_publisher"
                    android:textStyle="italic"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:fontFamily="sans-serif"
                    android:textColor="#8e24aa"
                    android:text="@string/news_card_publisher"/>

            <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/news_card_time"
                        android:layout_marginLeft="16dp"
                        android:layout_marginRight="16dp"
                        android:fontFamily="sans-serif"
                        android:layout_alignParentStart="true"
                        android:layout_toStartOf="@id/news_card_share"
                        android:textColor="#a4a4a4"
                        android:text="@string/news_card_time"/>

                <ImageView
                        android:id="@+id/news_card_share"
                        android:layout_width="18dp"
                        android:layout_height="18dp"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:contentDescription="@string/news_card_share_description"
                        android:src="@drawable/ic_share_black_18dp"/>

            </RelativeLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>