<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewsPage">

    <TextView
            android:text="@string/news_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/news_title"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="parent"
            android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6" android:textSize="30sp"/>

    <View
            android:layout_width="wrap_content"
            android:layout_height="2dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/news_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp" android:id="@+id/line_between_title_subtitle"/>
    <TextView
            android:text="@string/news_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/news_subtitle" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/line_between_title_subtitle" android:layout_marginTop="4dp"
            android:textSize="16sp" android:textStyle="italic"/>

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/news_subtitle"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
                      android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/article"
                    android:text="@string/news_content" app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="casual"/>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>