<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".NewsPage">

    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="0dp"
            android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="56dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintHorizontal_bias="1.0" app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:id="@+id/news_layout">

            <TextView
                    android:text="@string/news_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/news_title"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                    android:layout_marginTop="12dp" app:layout_constraintTop_toTopOf="parent"
                    android:textAppearance="@style/Base.TextAppearance.MaterialComponents.Headline6"
                    android:textSize="30sp" android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"/>

            <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="6dp"
                    app:layout_constraintTop_toBottomOf="@+id/news_title" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" android:id="@+id/line_between_title_subtitle"/>
            <TextView
                    android:text="@string/news_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/news_subtitle" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/line_between_title_subtitle"
                    android:layout_marginTop="4dp"
                    android:textSize="16sp" android:textStyle="italic"/>

            <HorizontalScrollView
                    android:id="@+id/images_scroll_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:visibility="gone"
                    android:scrollbarAlwaysDrawHorizontalTrack="false"
                    app:layout_constraintTop_toBottomOf="@+id/news_subtitle"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp">
                <LinearLayout
                        android:id="@+id/linear_layout_for_images"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"/>
            </HorizontalScrollView>

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/news_content"
                    android:text="@string/news_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1" android:fontFamily="casual"
                    android:layout_marginTop="10dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/images_scroll_view" android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button
            android:text="@string/button_favorite"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/news_button_favorite"
            android:gravity="center"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/news_button_share" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
            android:text="@string/button_share"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/news_button_share"
            android:gravity="center"
            app:layout_constraintLeft_toRightOf="@+id/news_button_favorite"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>